--- a/front_app/src/components/styles/Stars.css
+++ b/front_app/src/components/styles/Stars.css
@@ -7,7 +7,8 @@
 
 
 
-.star
+
+.star 
 {
     width: 30px;
     height: 30px;
@@ -19,4 +20,9 @@
 .active
 {
     background-color: red;
+}
+
+.nonActive
+{
+    background-color: black;
 }
