--- a/front_app/src/components/styles/Stars.css
+++ b/front_app/src/components/styles/Stars.css
@@ -8,13 +8,20 @@
 
 
 
+.star, .reset-bt
+{
+    width: 20px;
+    height: 20px;
+    /* background-color: black; */
+    border-radius: 50%;
+    margin: auto;
+}
+
 .star 
 {
     width: 30px;
     height: 30px;
-    background-color: black;
-    border-radius: 50%;
-    margin: auto;
+ background-color: black;
 }
 
 .active
@@ -22,7 +29,20 @@
     background-color: red;
 }
 
-.nonActive
+
+.possible
 {
-    background-color: black;
+    background-color: limegreen;
+    font-weight: 900;
+}
+
+.hidden 
+{
+    width: 10px;
+    height: 10px;
+    background-color: rgb(248, 74, 239);
+    margin-right: 10px;
+}
+.hidden::first-letter {
+    visibility: hidden;
 }
