--- a/front_app/src/Components/employee_surveys/styles/Stars.css
+++ b/front_app/src/Components/employee_surveys/styles/Stars.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
 }
 
 
@@ -21,12 +22,12 @@
 {
     width: 30px;
     height: 30px;
- background-color: black;
+ /* background-color: black; */
 }
 
 .active
 {
-    background-color: red;
+    /* background-color: red; */
 }
 
 
