--- a/front_app/src/Components/employee_surveys/styles/BoxQR.css
+++ b/front_app/src/Components/employee_surveys/styles/BoxQR.css
@@ -1,7 +1,9 @@
 .boxqr
 {
-    width: 400px;
-    height: 250px;
-    background-color: rgb(148, 144, 143);
+    max-width: 350px;
+    height: auto;
+    /* background-color: rgb(148, 144, 143); */
+    padding-bottom: 10px;
     margin: auto;
+    
 }
