--- a/front_app/src/Components/employee_surveys/styles/KickOffPage.css
+++ b/front_app/src/Components/employee_surveys/styles/KickOffPage.css
@@ -47,3 +47,16 @@ body {
     font-family : Arial, Helvetica, sans-serif;
     font-weight : bold ;
 }
+
+.not-important {
+    /*background-color: grey ; */
+    margin : 10px;
+    display: inline-flex;
+    justify-content: center;
+    white-space: nowrap;
+}
+.not-important:hover {
+    background-color: rgb(190, 190, 190) ;
+    border-radius: 2px ;
+}
+
