--- a/front_app/src/Components/admin_back-office/styles/BackOfficePage.css
+++ b/front_app/src/Components/admin_back-office/styles/BackOfficePage.css
@@ -81,8 +81,8 @@ body {
 
 }
 .question-show-button{
-    position: absolute ;
-    right :470px;
+    position: relative ;
+    /* right :470px; */
 }
 
 .question-add-button {
@@ -107,6 +107,8 @@ body {
 .back-off-question {
     box-sizing: border-box;
     background-color : rgb(173, 173, 173);
+    color : rgb(51, 51, 51) ;
+    font-size: 24px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 50px;
