--- a/front_app/src/Components/employee_surveys/styles/HomePage.css
+++ b/front_app/src/Components/employee_surveys/styles/HomePage.css
@@ -10,24 +10,36 @@
     background-image: url('./../symbols/logo_eBloom.png');
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 30%;
+}
+
+.HomePage .buttonGetStarted{
+    justify-content: end;
+    /* display: flex; */
+    /* margin-top: 1000px; */
+    /* margin-top: 100px; */
+    /* display: none; */
+    position: fixed;
+    bottom: 80px;
+    left: 660px;
+    right: 0px;
+
 }
 
 .HomePage .button {
-    /* width: 270px; */
+    display: block;
+    width: 270px;
     padding: 0.8em;
-    /* margin-top: -100px; */
-    /* margin-bottom: -170px; */
     color: #ffffff;
     text-decoration: none;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-size: 1.5em;
     background: #5fc1ea;
-    /* border: 2px solid black; */
-    /* border-radius: 50px; */
+    border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
 
 .HomePage .button:hover {
     opacity: 80%;
-    background-color: rgba(255, 255, 255, 0);
+    /* background-color: rgba(255, 255, 255, 0); */
 }
