--- a/front_app/src/Components/Dashboard/Dashboard.css
+++ b/front_app/src/Components/Dashboard/Dashboard.css
@@ -35,7 +35,7 @@ html {
     background-image: url('../../Components/employee_surveys/symbols/font_smaily.jpg');
     background-position: center;
     background-repeat: no-repeat; */
-    
+
 
 
 .input
@@ -53,13 +53,13 @@ html {
 {
     margin-top: 200px;
 }
+
 .container-scroll-date
 {
-    
-    margin-left: 520px;
-    display: flex;
-    flex-direction: row;
-    
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+
 }
 
 .p-date
