--- a/front_app/src/Components/Dashboard/Dashboard.css
+++ b/front_app/src/Components/Dashboard/Dashboard.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
 } */
-html {
+/* html {
     margin: 0px;
     padding: 0px;
 
@@ -12,7 +12,7 @@ html {
     background-image: url('../../Components/employee_surveys/symbols/font_smaily.jpg');
     background-position: center;
     background-repeat: no-repeat;
-}
+} */
 
 
 /* .font-navbar-page { */
