--- a/front_app/src/Components/Manager/Styles/HomePage.css
+++ b/front_app/src/Components/Manager/Styles/HomePage.css
@@ -8,7 +8,7 @@
 .HomePage {
     width: 100vw;
     height: 100vh;
-    background-image: url('./../symbols/logo_eBloom.png');
+    background-image: url('../../Employee/symbols/logo_eBloom.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 30%;
