Bugs Fix for the 29-01-2019 show . By Pierre 21h00.

--- a/front_app/src/index.css
+++ b/front_app/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.kickOffPage > h1 {
+  text-align: center;
+}
+
+.dailyQuestion {
+  text-align: center;
+}
