--- a/front_app/src/Components/Dashboard/Dashboard.css
+++ b/front_app/src/Components/Dashboard/Dashboard.css
@@ -51,7 +51,7 @@
 
 .form-questions
 {
-    margin-top: 200px;
+    margin-top: 30px;
 }
 
 .container-scroll-date
@@ -68,4 +68,10 @@
     margin-left: 50px;
     margin-right: 50px;
     vertical-align: middle;
+}
+
+.confirmbtn {
+    margin-left: 46%;
+    width: 80px;
+    background-color: grey;
 }
