--- a/front_app/src/Components/Admin/styles/DashboardPage.css
+++ b/front_app/src/Components/Admin/styles/DashboardPage.css
@@ -1,12 +1,3 @@
-*{
-    margin:0;
-    padding: 0;
-    color : black;
-    font-family : Arial, Helvetica, sans-serif;
-    font-weight : bold ;
-}
-
-
 
 .diagramArea{
     height: 600px;
@@ -16,7 +7,7 @@
     justify-content: center;
 }
 .zone{
-    width: 40%;
+    width: 40%
 }
 .logoCloudAndSun{
     background-image: url('./symbols/cloud_and_sun_color.png');
