--- a/front_app/src/Components/Admin/styles/BackOfficePage.css
+++ b/front_app/src/Components/Admin/styles/BackOfficePage.css
@@ -17,7 +17,7 @@ body {
 }
 
 .abstrac-it {
-    position : absolute ;  
+    position : absolute ;
 }
 .hover {
     cursor : pointer;
@@ -35,7 +35,7 @@ body {
 
 
 .category-box {
-    width: 800px; 
+    width: 800px;
     margin: 20px;
     display: flex;
     flex-direction: column;
@@ -75,29 +75,23 @@ body {
     /* font-weight: bold; */
     font-size: 32px;
     padding: 0px;
-    
+
     width : 40px;
     height: 40px;
     margin : 0px;
     border-radius: 50%;
-    
+
 }
 
 
 .back-off-question {
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color : rgb(173, 173, 173);
     color : rgb(51, 51, 51) ;
     font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 50px;
-    padding-right: 10px;
     border-radius: 3px ;
-    margin : 5px ;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
 }
 
 
