Controlers module made and surveys today middleware combination done. By Pierre

--- a/front_app/src/Components/Admin/styles/AdminPage.css
+++ b/front_app/src/Components/Admin/styles/AdminPage.css
@@ -2,7 +2,7 @@
 .pages-admin-login{
     width: 100vw;
     height: auto;
-    background-color: rgb(147, 147, 189);
+    background-color: darkblue;
 }
 
 .admin-login-header {
