--- a/front_app/src/Components/Core/DailySurvey/Smaily.css
+++ b/front_app/src/Components/Core/DailySurvey/Smaily.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding: 0;
-    color : black;
+    /* color : black; */
     font-family : Arial, Helvetica, sans-serif;
     font-weight : bold ;
 }
