--- a/front_app/src/Components/Admin/styles/BackOfficePage.css
+++ b/front_app/src/Components/Admin/styles/BackOfficePage.css
@@ -11,7 +11,7 @@ body {
 .back-office-page {
     width: 100vw;
     height: 100vh;
-    background-image: url('./symbols/font_smaily.jpg');
+    background-image: url('./symbols/background.png');
     background-position: center;
     background-repeat: no-repeat;
 }
