--- a/front_app/src/Components/Admin/styles/Dashboard.css
+++ b/front_app/src/Components/Admin/styles/Dashboard.css
@@ -9,14 +9,14 @@
 
     width: 100vw;
     height: 100vh;
-    background-image: url('../../Components/employee_surveys/symbols/font_smaily.jpg');
+    background-image: url('../../Components/employee_surveys/symbols/background.png');
     background-position: center;
     background-repeat: no-repeat;
 } */
 
 
 /* .font-navbar-page { */
-    /* background-image: url("./styles/symbols/font_smaily.jpg") ; */
+    /* background-image: url("./styles/symbols/background.png") ; */
     /* background-position: center;
     background : no-repeat; */
     /* background-color : rgb(0, 82, 41); */
@@ -32,7 +32,7 @@
 
     /* width: 100vw;
     height: 100vh;
-    background-image: url('../../Components/employee_surveys/symbols/font_smaily.jpg');
+    background-image: url('../../Components/employee_surveys/symbols/background.png');
     background-position: center;
     background-repeat: no-repeat; */
 
