--- a/front_app/src/App.css
+++ b/front_app/src/App.css
@@ -4,7 +4,11 @@ html {
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
+  background-image: url('./Components/Employee/symbols/background.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .logo-ebloom {
