Fixed layout for admin . Switch to a common background on the whole app.

--- a/front_app/src/Components/Admin/styles/AdminLoginPage.css
+++ b/front_app/src/Components/Admin/styles/AdminLoginPage.css
@@ -2,7 +2,7 @@
 .pages-admin-login{
     width: 100vw;
     height: 100%;
-    background-color: darkblue;
+    overflow: auto;
 }
 
 .admin-login-header {
