--- a/front_app/src/App.css
+++ b/front_app/src/App.css
@@ -4,7 +4,7 @@ html {
 }
 
 .App {
-  height: 100%;
+  height: 100vh;
   background-image: url('./Components/Employee/symbols/background.png');
   background-repeat: no-repeat;
   background-position: center;
