--- a/front_app/src/Components/Admin/styles/AdminPage.css
+++ b/front_app/src/Components/Admin/styles/AdminPage.css
@@ -1,8 +1,7 @@
 
 .pages-admin-login{
-    width: 100vw;
-    height: auto;
-    background-color: darkblue;
+    height: 100%;
+    overflow: auto;
 }
 
 .admin-login-header {
