fix nav + beige

--- a/front_app/src/Components/Admin/styles/BackOfficePage.css
+++ b/front_app/src/Components/Admin/styles/BackOfficePage.css
@@ -51,7 +51,7 @@ body {
 .category-head {
     box-sizing: border-box;
     color: blueviolet;
-    background-color : rgb(189, 189, 189);
+    background-color : beige;
     font-size: 32px;
     padding-top : 10px;
     padding-bottom: 10px;
